impl: dimension setting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="buttonpad">
+        <button id="setdimensions">Set dimensions
+
+        </button>
+        <button>
+
+        </button>
+        <button>
+
+        </button>
+
+    </div>
     <div id="sketchpad">
 
     </div>
