impl: reset button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="setdimensions">Set dimensions
 
         </button>
-        <button>
+        <button id="reset"> Reset
 
         </button>
         <button>
