impl: added colors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="reset"> Reset
 
         </button>
-        <button>
+        <button id="pencolor"> Black/Random
 
         </button>
 
